client/src/components/css/quote_form.module.css
.mainContainer{
    width: 100%;
    margin: 20px;
}
.mainContainer p{
    padding: 0;
}
.subHeader{
    padding: 20px;
    text-align: left;
}
.labelContainer{
    font-weight: bold;
}
.headingBlock {
    padding: 20px;
}

.inputBox{
    margin-bottom: 40px;
}
input::placeholder {
    font-size: 1rem;
    position: absolute;
    top: 50%;
    left: 15px;
    transform: translate(0, -50%);
    margin: 0;
    transition: all 0.3s ease-in-out;
  }
  input:focus::placeholder {
  font-size: 0.8rem;
  position: absolute;
  top: 50%;
  left: 13px;
  transform: translateY(-50%);
  outline: none;
  color: #aaa;
}
textarea::placeholder {
    font-size: 1rem;
    position: absolute;
    top: 15%;
    left: 15px;
    transform: translate(0, -50%);
    margin: 0;
    transition: all 0.3s ease-in-out;
}
textarea:focus::placeholder {
  font-size: 0.8rem;
  position: absolute;
  top: 12%;
  left: 13px;
  transform: translateY(-50%);
  outline: none;
  color: #aaa;
  border-color: #ffa500;
}

